Package_Tools/include-C/libxmlb-2/libxmlb/fertig/xb_builder_source.h

#define XB_TYPE_BUILDER_SOURCE (xb_builder_source_get_type())
/**
 * XbBuilderSourceFlags:
 * @XB_BUILDER_SOURCE_FLAG_NONE:		No extra flags to use
 * @XB_BUILDER_SOURCE_FLAG_LITERAL_TEXT:	Do not attempt to repair XML whitespace
 * @XB_BUILDER_SOURCE_FLAG_WATCH_FILE:		Watch the source file for changes
 * @XB_BUILDER_SOURCE_FLAG_WATCH_DIRECTORY:	Watch the directory containing the source file for
 *changes (for example, if watching all the sources in a directory — this allows the file monitors
 *to be shared)
 *
 * The flags for converting to XML.
 **/
typedef enum {
	XB_BUILDER_SOURCE_FLAG_NONE = 0,		 /* Since: 0.1.0 */
	XB_BUILDER_SOURCE_FLAG_LITERAL_TEXT = 1 << 0,	 /* Since: 0.1.0 */
	XB_BUILDER_SOURCE_FLAG_WATCH_FILE = 1 << 1,	 /* Since: 0.1.0 */
	XB_BUILDER_SOURCE_FLAG_WATCH_DIRECTORY = 1 << 2, /* Since: 0.2.0 */
	/*< private >*/
	XB_BUILDER_SOURCE_FLAG_LAST
} XbBuilderSourceFlags;
typedef GInputStream *(*XbBuilderSourceAdapterFunc)(XbBuilderSource *self,
						    XbBuilderSourceCtx *ctx,
						    gpointer user_data,
						    GCancellable *cancellable,
						    GError **error);
XbBuilderSource *
xb_builder_source_new(void);
gboolean
xb_builder_source_load_file(XbBuilderSource *self,
			    GFile *file,
			    XbBuilderSourceFlags flags,
			    GCancellable *cancellable,
			    GError **error) ;
gboolean
xb_builder_source_load_xml(XbBuilderSource *self,
			   const gchar *xml,
			   XbBuilderSourceFlags flags,
			   GError **error) ;
gboolean
xb_builder_source_load_bytes(XbBuilderSource *self,
			     GBytes *bytes,
			     XbBuilderSourceFlags flags,
			     GError **error) ;
void
xb_builder_source_set_info(XbBuilderSource *self, XbBuilderNode *info) ;
void
xb_builder_source_set_prefix(XbBuilderSource *self, const gchar *prefix) ;
void
xb_builder_source_add_fixup(XbBuilderSource *self, XbBuilderFixup *fixup) ;
void
xb_builder_source_add_adapter(XbBuilderSource *self,
			      const gchar *content_types,
			      XbBuilderSourceAdapterFunc func,
			      gpointer user_data,
			      GDestroyNotify user_data_free);
void
xb_builder_source_add_simple_adapter(XbBuilderSource *self,
				     const gchar *content_types,
				     XbBuilderSourceAdapterFunc func,
				     gpointer user_data,
				     GDestroyNotify user_data_free) ;